modify all .md files to make them satisfy the standard md rules

--- a/042e1059.md
+++ b/042e1059.md
@@ -5,7 +5,9 @@ date: 2021-03-03T03:32
 # texpad and latex
 
 ## Tips for Texpad
+
 > For more information: [Texpad](www.texpad.com)
+
 ### using custom package with built-in TexpadTeX typesetter
 
 - `cmd ,` to find `Typesetting` ->`Shared Files`->`Shared TEX files`,
@@ -13,14 +15,19 @@ date: 2021-03-03T03:32
 - Restart texpad (if necessary)
 
 ## Tips for LaTeX
+
 ### Install revtex4-2
+
 - find the database where TeX uses (e.g., `/opt/local/share/texmf-local/`), via
+
 ```shell
-$ sudo texhash
+sudo texhash
 ```
+
 - Download the REVTeX 4.2 distribution from APS or CTAN, in the standard "TeX Directory Structure" (TDS) layout.
 - Put its directory to the database.
 - Lastly use again
+
 ```shell
-$ sudo texhash
+sudo texhash
 ```
