--- a/defc4497.md
+++ b/defc4497.md
@@ -1,9 +1,12 @@
 ---
 date: 2021-03-03T16:50
 ---
-# Run applications with graphics remotely via SSH
 
-## server side
+# linux tips and tricks
+
+## Run applications with graphics remotely via SSH
+
+### server side
 
 - make sure `xauth` is installed (`$ xauth info`)
 
@@ -17,7 +20,7 @@ X11UseLocalhost no
 
 - restart
 
-## client side
+### client side
 
 - on client, in `~/.ssh/config` file
 
@@ -37,3 +40,18 @@ Host *
 xauth generate :0 . trusted
 xauth list
 ```
+
+## install googlepinyin on Ubuntu
+
+- first install *googlepinyin*
+
+```shell
+sudo apt-get update && apt-get upgrade
+sudo apt-get install fcitx-googlepinyin
+```
+
+- go to *settings* of ubuntu, in *language support*, find *Keyboard input method system*, the default is *iBus*, change it to *fcitx*
+
+- restart ubuntu
+
+- in right-upper corner of status bar, click the rectangle button and find *Configure*. After unselect *Only Show Current Language*, add *Google Pinyin*
