--- a/3799e156.md
+++ b/3799e156.md
@@ -5,8 +5,9 @@ date: 2021-03-03T16:42
 # Neat tricks in texmacs
 
 ## type dirac notation
-- $\langle a |$
-```
+
+- to insert $\langle a |$, type
+
+```texmacs
 <  SHIFT-TAB  a |
 ```
-- 
