add some new notes

--- a/3799e156.md
+++ b/3799e156.md
@@ -11,3 +11,34 @@ date: 2021-03-03T16:42
 ```texmacs
 <  SHIFT-TAB  a |
 ```
+
+## hack keyboard shortcuts
+
+- Check the following file to find examples on current key bindings are defined:
+
+```shell
+TEXMACS_PATH/progs/math/math-kdb.scm
+```
+
+Then it is better to define one's own key bindings in `$TEXMACS_HOME_PATH/progs/my-init-texmacs.scm`. An example is
+
+```scheme
+(delayed
+  (lazy-keyboard-force)
+  (kbd-map
+    (:mode in-math-not-hybrid?)
+    ("c var" "<chi>")
+    ("q var" "<theta>")
+    ("f var" "<phi>")
+    ("f var var" "<varphi>")
+    ("k var var var" "<b-k>")
+    ("L var var" "<cal-L>")
+    ("+ var" "<dag>")
+    ("+ var var" "<kreuz>")
+    ("S var var var" (math-big-operator "sum"))
+    ("O var var" "<cal-O>")
+    ("A var var var var" "<cal-A>")
+    ("x var var" "<b-x>")
+    ("r var var var" "<b-r>")
+    ))
+```
