--- a/defc4497.md
+++ b/defc4497.md
@@ -55,3 +55,16 @@ sudo apt-get install fcitx-googlepinyin
 - restart ubuntu
 
 - in right-upper corner of status bar, click the rectangle button and find *Configure*. After unselect *Only Show Current Language*, add *Google Pinyin*
+
+## xclip
+
+When `date | xclip`, the default case is to copy to the primary X selection buffer. To use `ctrl` + `v`, type
+```
+date | xclip -selection clipboard
+```
+or
+```
+xclip < ~/.zshrc -sel clip
+```
+
+Also note `Error: can't open display: (null)` can be solved by `ssh user@host -X`.
