add a note on how to disable keyboard on ubuntu

--- a/defc4497.md
+++ b/defc4497.md
@@ -68,3 +68,10 @@ xclip < ~/.zshrc -sel clip
 ```
 
 Also note `Error: can't open display: (null)` can be solved by `ssh user@host -X`.
+
+##  disable keyboard and mouse
+
+1. execute `xinput list`
+2. find the device you want to disable, remember its `id` and `slave keyboard (#)`, the latter is id # of the `master`, to be used to re-enable it
+3. to disable, execute `xinput float <id#>`, e.g., `xinput float 10` if `id` is `10`
+4. to re-enable, execute `xinput reattach <id#> <master#>`, e.g., `xinput reattach 10 3`, if the master id is `3`
